# zk_fisco_platform

./: .env.example  .gitignore  DOCKER_容器化步骤.md  DOCKER开发模式优化说明.md  Polygon内容存证_前端集成指南.md  Polygon内容存证改造总结.md  README.md  ZK_批量奖励结算系统方案.md  check-docker-status.sh  images.lnk  package.json  pom.xml  start-local.sh  stop-local.sh  功能开发说明.md  功能清单.md  平台功能技术总结.md  钱包管理系统方案设计（简化版）.md  隐私充值提现_ZK设计草案.md
backend/: .gitignore  Dockerfile  Dockerfile.dev  database_update.sql  pom.xml
blockchain/: FUND_INSTRUCTIONS.md  hardhat.config.js  package-lock.json  package.json  readme.md  test-forum-contract.js
blockchain/contracts/: CoffeeWeeklyRewardDistributor.sol  CompetitionCommitRegistry.sol  ContentRollupRegistry.sol  ContentShareRegistry.sol  ForumTokenExtension.sol  MockRiscZeroVerifier.sol  MockWEEToken.sol  RewardGovernor.sol  RollupRewardDistributor.sol
blockchain/deployments/: amoy-content-share.json  amoy-wee-token.json  amoy.json  hardhat.json  local.json  polygon-content-share-1763707770085.json  polygon.json
blockchain/scripts/: analyze_journal.js  calc-error-selector.js  check-amoy-contracts.js  check-balance-debug.js  check-balance.js  check-batch.js  check-batch2.js  check-contract-imageid.js  check-contract.js  check-final-batch.js  check-selector-amoy.js  check-selector-fixed.js  check-selector.js  (+35 more)
docker/: docker-compose.dev.yml  docker-compose.yml  restart-docker-dev.sh  restart-docker.sh
docs/: AMOY_TEST_GUIDE.md  ZK_ROLLUP_ENABLED.md  rollup-hourly.md  rollup-tech.md  zk-rollup-settlement-blog.md  zkrollup-current-config.md  zkrollup-issues-and-solutions.md
frontend/: Dockerfile  Dockerfile.dev  nginx.conf  package-lock.json  package.json  pom.xml  vue.config.js  前端改动说明.md  新增页面说明.md
minio/: IPFS.md
scripts/: check-amoy-config.sh  deploy-to-amoy.sh  quick-deploy-amoy.sh
zk/: Cargo.toml
zk/host/: Cargo.toml
zk/host/src/: prove.rs  verify.rs
zk/methods/: Cargo.toml
zk/methods/guest/: Cargo.toml
zk/methods/guest/src/: main.rs
zk/methods/src/: lib.rs
(+324 files in other folders)
