[package]
name    = "zk-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prove"
path = "src/prove.rs"

[[bin]]
name = "verify"
path = "src/verify.rs"

[dependencies]
risc0-zkvm = { version = "^3.0.5", features = ["prove", "cuda"] }
bincode    = "1.3"
methods    = { path = "../methods" }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2       = "0.10"
hex        = "0.4"
anyhow     = "1.0"
