[package]
name    = "ranking-verify-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.1", default-features = false, features = ["std"] }
serde      = { version = "1.0", features = ["derive"] }
sha2       = { version = "0.10", default-features = false, features = ["force-soft"] }
