[package]
name    = "ranking-verify"
version = "0.1.0"
edition = "2021"

# Standalone from the parent workspace; risc0-build compiles this separately.
[workspace]

[dependencies]
risc0-zkvm = { version = "^3.0.5", default-features = false, features = ["std"] }
serde      = { version = "1.0", features = ["derive"] }
